recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: ';' expected but '(' found.
  {getCouleur():current(step)
                       ^